codama-macros/tests/codama_attribute/enum_discriminator_directive/empty_directive.fail.stderr
error: expected a list: `enum_discriminator(...)` or `enum_discriminator = (...)`
 --> tests/codama_attribute/enum_discriminator_directive/empty_directive.fail.rs:3:10
  |
3 | #[codama(enum_discriminator)]
  |          ^^^^^^^^^^^^^^^^^^

error: enum_discriminator must specify at least one of: name, size
 --> tests/codama_attribute/enum_discriminator_directive/empty_directive.fail.rs:6:10
  |
6 | #[codama(enum_discriminator())]
  |          ^^^^^^^^^^^^^^^^^^^^
