codama-macros/tests/codama_attribute/enum_discriminator_directive/empty_directive.fail.rs
use codama_macros::codama;

#[codama(enum_discriminator)]
pub struct EmptyTest;

#[codama(enum_discriminator())]
pub struct EmptyTestWithBraces;

fn main() {}
